--- a/themes/alienvibes/static/css/main.css
+++ b/themes/alienvibes/static/css/main.css
@@ -1,443 +1,1 @@
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    filter: opacity(0);
-    transform: translate3D(0, 0%, 0);
-  }
-  to {
-    opacity: 1;
-    filter: opacity(1);
-    transform: translate3D(0, 0%, 0);
-  }
-}
-#eventModal.animate {
-  animation: fadeIn 500ms ease;
-}
-
-.hero {
-  display: grid;
-  margin: 0 auto !important;
-  overflow: hidden;
-  padding: 0 !important;
-  place-items: center;
-  position: relative;
-}
-.hero .hero__image-wrapper {
-  grid-area: 1/1;
-  position: relative;
-  place-items: center;
-  z-index: 0;
-}
-.hero .hero__image-wrapper .hero__image-wrapper__background {
-  grid-area: 1/1;
-  height: 100%;
-  margin: auto;
-  max-width: 100%;
-  object-fit: cover;
-  position: relative;
-  width: 100%;
-  z-index: -1;
-}
-.hero .hero-content {
-  background: linear-gradient(0.25turn, hsla(155, 67%, 45%, 0.5), hsla(155, 67%, 45%, 0.5));
-  display: grid;
-  grid-area: 1/1;
-  height: 100%;
-  place-items: center;
-  z-index: 1;
-}
-.hero .hero-content .row .col .hero-text {
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-}
-
-.services {
-  display: grid;
-  place-items: center;
-  overflow: hidden;
-}
-.services .services__image-wrapper {
-  grid-area: 1/1;
-  height: 100%;
-  position: relative;
-  z-index: 0;
-}
-.services .services__image-wrapper img {
-  grid-area: 1/1;
-  max-width: 100%;
-}
-.services .grid-wrapper {
-  background: linear-gradient(0.25turn, hsla(155, 67%, 45%, 0.5), hsla(155, 67%, 45%, 0.5));
-  grid-area: 1/1;
-  display: grid;
-  place-items: center;
-  height: 100%;
-  padding: 1.5rem;
-  position: relative;
-  z-index: 2;
-}
-.services .grid-wrapper .container-fluid .row .col-12 .card {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-}
-@media screen and (min-width: 1200px) {
-  .services .grid-wrapper .container-fluid .row .col-12 .card {
-    opacity: 0.85;
-  }
-}
-.services:hover .grid-wrapper .container-fluid .col-12 .card {
-  opacity: 1;
-}
-
-.interactive {
-  -webkit-transition: all 250ms eas !important;
-  -moz-transition: all 250ms ease !important;
-  transition: all 250ms ease !important;
-}
-.interactive:hover {
-  -moz-transform: rotateZ(-3deg);
-  -webkit-transform: rotateZ(-3deg);
-  transform: rotateZ(-3deg);
-}
-
-.testimonials .container-fluid .row .col-12 .card {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  opacity: 0.85;
-}
-.testimonials:hover .container-fluid .row .col-12 .card {
-  opacity: 1;
-}
-
-.why-us {
-  display: grid;
-  place-items: center;
-  position: relative;
-}
-.why-us .bg-image {
-  grid-area: 1/1;
-  height: auto;
-  max-width: 100%;
-  position: relative;
-  bottom: 0;
-  left: 0;
-  opacity: 0.1;
-  z-index: 0;
-}
-.why-us .container {
-  grid-area: 1/1;
-}
-
-.extra-depth {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-}
-.extra-depth img {
-  border-radius: 10px;
-  box-shadow: 2px 2px 20px -10px rgba(255, 255, 255, 0.33) !important;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-.cta .container .row .col-12 .shape {
-  border: 1px solid green;
-  border-top-right-radius: 3rem;
-  border-bottom-right-radius: 3rem;
-  display: grid;
-  height: 100%;
-  min-height: 10rem;
-  min-width: 100px;
-  padding: 1rem;
-  place-items: center;
-}
-.cta .container .row .col-12 .shape svg {
-  max-width: 350px;
-  height: auto;
-}
-.cta .container .row .col-12 .shape .svg-1 {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  animation: fadeIn 250ms ease forwards;
-}
-@media screen and (min-width: 968px) {
-  .cta .container .row .col-12 .shape-content {
-    text-align: left;
-  }
-}
-
-img.gallery {
-  box-shadow: 2px 2px 20px -10px rgba(0, 0, 0, 0.5);
-  cursor: pointer;
-  margin: 1rem auto;
-  max-width: 100%;
-}
-
-.gallery-modal {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  z-index: -1;
-}
-.gallery-modal .count,
-.gallery-modal .total {
-  display: inline-block;
-  margin-top: 1rem;
-}
-.gallery-modal #prev,
-.gallery-modal #next {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  border: 1px solid #fff;
-  position: absolute;
-  top: 50%;
-  z-index: 12;
-}
-.gallery-modal #prev {
-  left: 1rem;
-}
-.gallery-modal #next {
-  right: 1rem;
-}
-.gallery-modal .inner-gallery-modal {
-  height: calc(100% - 4rem);
-  padding-bottom: 1rem;
-  width: 100%;
-}
-.gallery-modal .inner-gallery-modal figure {
-  margin: 1rem auto;
-  display: grid;
-  place-items: center;
-  grid-area: 1/1;
-  padding-bottom: 1rem;
-  width: 100%;
-  height: 100%;
-}
-.gallery-modal .inner-gallery-modal figure .fullsize-gallery {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  grid-area: 1/1;
-  padding: 1.5rem;
-  position: relative;
-  max-height: calc(100vh - 4rem);
-  max-width: calc(100% - 2rem);
-  opacity: 0;
-  object-fit: cover;
-}
-.gallery-modal .inner-gallery-modal figure .fullsize-gallery.active {
-  transition-delay: 500ms;
-  -webkit-transition-delay: 500ms;
-  -moz-transition-delay: 500ms;
-  opacity: 1;
-}
-.gallery-modal .inner-gallery-modal figure .fa-times {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  cursor: pointer;
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  z-index: 11;
-}
-.gallery-modal .inner-gallery-modal figure .fa-times:hover {
-  transform: rotateZ(360deg);
-  -webkit-transform: rotateZ(360deg);
-  -moz-transform: rotateZ(360deg);
-}
-.gallery-modal.active {
-  background: rgba(0, 0, 0, 0.75);
-  opacity: 1;
-  z-index: 99;
-}
-
-main.single {
-  max-width: 100ch;
-  min-height: 100vh;
-  text-align: center;
-}
-main.single h1,
-main.single h2,
-main.single h3 {
-  max-width: 100ch;
-  padding: 1.25rem;
-  text-align: left;
-}
-main.single img {
-  height: auto;
-  margin: auto;
-  max-width: 100ch;
-  text-align: center;
-  width: 100%;
-}
-main.single p {
-  font-size: 1.11rem;
-  margin: 1rem auto;
-  max-width: 100ch;
-  padding: 1rem;
-  text-align: left;
-}
-main.single ul {
-  list-style: none;
-  padding-left: 1rem;
-}
-main.single ul li {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  margin: 0.25rem;
-  padding: 0.25rem 0;
-  position: relative;
-  text-align: left;
-}
-
-@keyframes waveAnimation {
-  from {
-    transform: rotateZ(-15deg) translate3D(0, -5%, 0) scale(1);
-  }
-  to {
-    transform: rotateZ(15deg) translate3D(0, 5%, 0) scale(1.05);
-  }
-}
-.footer .container .row .col-12 .footer-link {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  transition-duration: 250ms;
-  -webkit-transition-duration: 250ms;
-}
-.footer .container .row .col-12 .footer-link .fa-chevron-right {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  transition-duration: 250ms;
-  -webkit-transition-duration: 250ms;
-}
-.footer .container .row .col-12 .footer-link:hover {
-  transition-duration: 250ms;
-  -webkit-transition-duration: 250ms;
-  padding-bottom: 1rem;
-  padding-left: 1rem;
-}
-.footer .container .row .col-12 .footer-link:hover .fa-chevron-right {
-  color: #f29b11;
-}
-
-.elevator {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  position: fixed;
-  bottom: 1rem;
-  right: 2rem;
-  opacity: 0;
-  z-index: 10;
-}
-.elevator i.fa-arrow-circle-up:hover {
-  color: #f29b11 !important;
-}
-
-.wave.animate {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  display: inline-block;
-  transition-duration: 250ms;
-  -webkit-transition-duration: 250ms;
-  -moz-transition-duration: 250ms;
-  animation: waveAnimation 250ms linear alternate 20;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
-html,
-body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  width: 100%;
-}
-
-.lazy {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  opacity: 0;
-}
-
-.fadeIn {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  opacity: 1;
-}
-
-.bg-img {
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  max-width: 100%;
-  opacity: 0.15;
-  z-index: 0;
-}
-
-.elevator-link {
-  position: relative;
-  z-index: 99;
-}
-
-.object-fit-cover {
-  height: 150px;
-  width: 150px;
-  object-fit: cover !important;
-}
-
-section.rules .row {
-  background: rgba(0, 0, 0, 0.5);
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-}
-section.rules .row .rules-card {
-  transition: all 1000ms ease;
-  -webkit-transition: all 1000ms ease;
-  -moz-transition: all 1000ms ease;
-  opacity: 0.85;
-}
-section.rules .row:hover .rules-card {
-  opacity: 1;
-}
-section.rules:hover .row {
-  background: rgba(0, 0, 0, 0);
-}
-
-/*# sourceMappingURL=main.css.map */
+@keyframes fadeIn{from{opacity:0;filter:opacity(0);transform:translate3D(0, 0%, 0)}to{opacity:1;filter:opacity(1);transform:translate3D(0, 0%, 0)}}#eventModal.animate{animation:fadeIn 500ms ease}.hero{display:grid;margin:0 auto !important;overflow:hidden;padding:0 !important;place-items:center;position:relative}.hero .hero__image-wrapper{grid-area:1/1;position:relative;place-items:center;z-index:0}.hero .hero__image-wrapper .hero__image-wrapper__background{grid-area:1/1;height:100%;margin:auto;max-width:100%;object-fit:cover;position:relative;width:100%;z-index:-1}.hero .hero-content{background:linear-gradient(0.25turn, hsla(155, 67%, 45%, 0.5), hsla(155, 67%, 45%, 0.5));display:grid;grid-area:1/1;height:100%;place-items:center;z-index:1}.hero .hero-content .row .col .hero-text{text-shadow:2px 2px 5px rgba(0,0,0,.5)}.services{display:grid;place-items:center;overflow:hidden}.services .services__image-wrapper{grid-area:1/1;height:100%;position:relative;z-index:0}.services .services__image-wrapper img{grid-area:1/1;max-width:100%}.services .grid-wrapper{background:linear-gradient(0.25turn, hsla(155, 67%, 45%, 0.5), hsla(155, 67%, 45%, 0.5));grid-area:1/1;display:grid;place-items:center;height:100%;padding:1.5rem;position:relative;z-index:2}.services .grid-wrapper .container-fluid .row .col-12 .card{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease}@media screen and (min-width: 1200px){.services .grid-wrapper .container-fluid .row .col-12 .card{opacity:.85}}.services:hover .grid-wrapper .container-fluid .col-12 .card{opacity:1}.interactive{-webkit-transition:all 250ms eas !important;-moz-transition:all 250ms ease !important;transition:all 250ms ease !important}.interactive:hover{-moz-transform:rotateZ(-3deg);-webkit-transform:rotateZ(-3deg);transform:rotateZ(-3deg)}.testimonials .container-fluid .row .col-12 .card{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;opacity:.85}.testimonials:hover .container-fluid .row .col-12 .card{opacity:1}.why-us{display:grid;place-items:center;position:relative}.why-us .bg-image{grid-area:1/1;height:auto;max-width:100%;position:relative;bottom:0;left:0;opacity:.1;z-index:0}.why-us .container{grid-area:1/1}.extra-depth{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease}.extra-depth img{border-radius:10px;box-shadow:2px 2px 20px -10px hsla(0,0%,100%,.33) !important}@keyframes fadeIn{from{opacity:0}to{opacity:1}}.cta .container .row .col-12 .shape{border:1px solid green;border-top-right-radius:3rem;border-bottom-right-radius:3rem;display:grid;height:100%;min-height:10rem;min-width:100px;padding:1rem;place-items:center}.cta .container .row .col-12 .shape svg{max-width:350px;height:auto}.cta .container .row .col-12 .shape .svg-1{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;animation:fadeIn 250ms ease forwards}@media screen and (min-width: 968px){.cta .container .row .col-12 .shape-content{text-align:left}}img.gallery{box-shadow:2px 2px 20px -10px rgba(0,0,0,.5);cursor:pointer;margin:1rem auto;max-width:100%}.gallery-modal{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;position:fixed;top:0;left:0;height:100%;width:100%;opacity:0;z-index:-1}.gallery-modal .count,.gallery-modal .total{display:inline-block;margin-top:1rem}.gallery-modal #prev,.gallery-modal #next{width:50px;height:50px;border-radius:50%;border:1px solid #fff;position:absolute;top:50%;z-index:12}.gallery-modal #prev{left:1rem}.gallery-modal #next{right:1rem}.gallery-modal .inner-gallery-modal{height:calc(100% - 4rem);padding-bottom:1rem;width:100%}.gallery-modal .inner-gallery-modal figure{margin:1rem auto;display:grid;place-items:center;grid-area:1/1;padding-bottom:1rem;width:100%;height:100%}.gallery-modal .inner-gallery-modal figure .fullsize-gallery{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;grid-area:1/1;padding:1.5rem;position:relative;max-height:calc(100vh - 4rem);max-width:calc(100% - 2rem);opacity:0;object-fit:cover}.gallery-modal .inner-gallery-modal figure .fullsize-gallery.active{transition-delay:500ms;-webkit-transition-delay:500ms;-moz-transition-delay:500ms;opacity:1}.gallery-modal .inner-gallery-modal figure .fa-times{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;cursor:pointer;position:absolute;top:1rem;right:1rem;z-index:11}.gallery-modal .inner-gallery-modal figure .fa-times:hover{transform:rotateZ(360deg);-webkit-transform:rotateZ(360deg);-moz-transform:rotateZ(360deg)}.gallery-modal.active{background:rgba(0,0,0,.75);opacity:1;z-index:99}main.single{max-width:100ch;min-height:100vh;text-align:center}main.single h1,main.single h2,main.single h3{max-width:100ch;padding:1.25rem;text-align:left}main.single img{height:auto;margin:auto;max-width:100ch;text-align:center;width:100%}main.single p{font-size:1.11rem;margin:1rem auto;max-width:100ch;padding:1rem;text-align:left}main.single ul{list-style:none;padding-left:1rem}main.single ul li{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;margin:.25rem;padding:.25rem 0;position:relative;text-align:left}@keyframes waveAnimation{from{transform:rotateZ(-15deg) translate3D(0, -5%, 0) scale(1)}to{transform:rotateZ(15deg) translate3D(0, 5%, 0) scale(1.05)}}.footer .container .row .col-12 .footer-link{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;transition-duration:250ms;-webkit-transition-duration:250ms}.footer .container .row .col-12 .footer-link .fa-chevron-right{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;transition-duration:250ms;-webkit-transition-duration:250ms}.footer .container .row .col-12 .footer-link:hover{transition-duration:250ms;-webkit-transition-duration:250ms;padding-bottom:1rem;padding-left:1rem}.footer .container .row .col-12 .footer-link:hover .fa-chevron-right{color:#f29b11}.elevator{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;position:fixed;bottom:1rem;right:2rem;opacity:0;z-index:10}.elevator i.fa-arrow-circle-up:hover{color:#f29b11 !important}.wave.animate{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;display:inline-block;transition-duration:250ms;-webkit-transition-duration:250ms;-moz-transition-duration:250ms;animation:waveAnimation 250ms linear alternate 20}*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}html{scroll-behavior:smooth}html,body{height:100%;margin:0;padding:0;overflow-x:hidden;width:100%}.lazy{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;opacity:0}.fadeIn{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;opacity:1}.bg-img{object-fit:cover;position:absolute;top:0;left:0;height:100%;max-width:100%;opacity:.15;z-index:0}.elevator-link{position:relative;z-index:99}.object-fit-cover{height:150px;width:150px;object-fit:cover !important}section.rules .row{background:rgba(0,0,0,.5);transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease}section.rules .row .rules-card{transition:all 1000ms ease;-webkit-transition:all 1000ms ease;-moz-transition:all 1000ms ease;opacity:.85}section.rules .row:hover .rules-card{opacity:1}section.rules:hover .row{background:rgba(0,0,0,0)}.is-countdown{--countdown-max-width: calc(350 / 16 * 1rem);width:min(var(--countdown-max-width),100%);margin:auto;gap:1rem;flex-flow:row wrap}.is-countdown>[class*=col-]{flex:1 1 calc(50% - 1rem);width:calc(50% - 1rem)}@media screen and (min-width: 15.625rem){.is-countdown>[class*=col-]{flex:1 1 calc(25% - 3rem);width:calc(25% - 3rem)}}
