--- a/public/scss/_components/_heroHeader.scss
+++ b/public/scss/_components/_heroHeader.scss
@@ -9,6 +9,12 @@
         grid-area: 1/1;
         position: relative;
         place-items: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
         z-index: 0;
         .hero__image-wrapper__background {
             grid-area: 1/1;
@@ -19,10 +25,15 @@
             position: relative;
             width: 100%;
             z-index: -1;
+            aspect-ratio: 16/9;
         }
     }
     .hero-content {
-        background: linear-gradient(0.25turn, hsla(155, 67%, 45%, 0.5), hsla(155, 67%, 45%, 0.5));
+        background: linear-gradient(
+            0.25turn,
+            hsla(155, 67%, 45%, 0.5),
+            hsla(155, 67%, 45%, 0.5)
+        );
         display: grid;
         grid-area: 1/1;
         height: 100%;
@@ -31,7 +42,7 @@
         .row {
             .col {
                 .hero-text {
-                    text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+                    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
                 }
             }
         }
