--- a/themes/alienvibes/layouts/partials/heroHeader.html
+++ b/themes/alienvibes/layouts/partials/heroHeader.html
@@ -1,14 +1,31 @@
 <header class="hero container-fluid">
     <div class="hero__image-wrapper">
-        <img data-src="{{.Site.BaseURL}}images/paintball-in-the-woods.webp" class="hero__image-wrapper__background lazy d-none d-xl-block" alt="paintball players in a forest running" height="1080" width="1920">
+        <img
+            src="{{.Site.BaseURL}}images/paintball-in-the-woods.webp"
+            class="hero__image-wrapper__background d-xl-block"
+            alt="paintball players in a forest running"
+            height="1080"
+            width="1920"
+            loading="eager"
+            decoding="async"
+        />
     </div>
     <div class="hero-content container-fluid p-3">
         <div class="row">
             <div class="col col-md-6 mx-auto text-center">
                 <h1 class="display-1 text-white hero-text p-3">{{ .Title }}</h1>
-                <h2 class="display-3 text-white hero-text p-3">{{ .Params.subtitle }}</h2>
-                <p class="lead text-white hero-text fw-normal p-3">{{ .Params.hero_text | safeHTML }}</p>
-                <a href="tel:+12315776252" role="button" class="btn btn-danger btn-large rounded-pill text-uppercase fw-bold p-3 fs-6 interactive">Call Us Now (231) 577-6252 </a>
+                <h2 class="display-3 text-white hero-text p-3">
+                    {{ .Params.subtitle }}
+                </h2>
+                <p class="lead text-white hero-text fw-normal p-3">
+                    {{ .Params.hero_text | safeHTML }}
+                </p>
+                <a
+                    href="tel:+12315776252"
+                    role="button"
+                    class="btn btn-danger btn-large rounded-pill text-uppercase fw-bold p-3 fs-6 interactive"
+                    >Call Us Now (231) 577-6252
+                </a>
             </div>
         </div>
     </div>
